5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1649_1054.log
== SUBMITION (2019-04-16 14:29:11) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- EXECUTION TIME:
0.167938
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
Ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:30:08) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: ")).
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- EXECUTION TIME:
0.12579
-- ERROR:
  File "/home/codebench/codes/1649/1054/main.py", line 2
    y=float(input()).
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:32:43) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: ")).
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 2
    y=float(input()).
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:32:51) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:33:10) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- EXECUTION TIME:
0.207631
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
Ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:33:43) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:33:55) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("Ponto nao pertence a reta")
-- EXECUTION TIME:
0.27615
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
Ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:34:43) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.202507
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:34:43) 
-- CODE:
x=float(input("digite o ponto x: "))
y=float(input("digite o ponto y: "))
if(2*x+y==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
